--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ assets:
   # Whenever or not cache compiled assets (disabled by default).
   # See `Compilation Cache` section of README for details.
   #
-  cache: true
+  cache: false
   #
   # Specifies list of MIME types that needs to have gzipped versions.
   # You can set it to `false` to disable gzipping. Only javascripts and
