--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,15 @@
 # Site settings
-title: Cluttered Code
+title: "Cluttered Code"
 description: "Incoherent snippets from a code junkie"
 baseurl: ""
 url: "http://cluttered-code.github.io/"
 
 # Author
-author: David Clutter
-email: cluttered.code@gmail.com
+author:
+  name: David Clutter
+  email: cluttered.code@gmail.com
+  twitter: cluttered_code
+  github: cluttered-code
 
 # Build settings
 markdown: kramdown
